syntax = "proto3";

package block;

// 180 + len(proof)
message BlockHeader {
    // bytes32(H256) - hash of prev block header
    bytes prevhash = 1;
    // ms since 1970-1-1
    uint64 timestamp = 2;
    uint64 height = 3;
    // bytes32(H256)
    bytes transactions_root = 4;
    // bytes32(H256)
    bytes state_root = 5;
    // bytes32(H256)
    bytes receipts_root = 6;
    // bytes256(2048bit)
    bytes logs_bloom = 7;
    uint64 quota_used = 8;
    uint64 quota_limit = 9;
    Proof proof = 10;
    // bytes20 - address of proposer
    bytes proposer = 11;
}

message Block {
    BlockHeader header = 1;
    repeated bytes tx_hashes = 2;
    bytes hash = 3;
}

message Proposal {
  bytes prevhash = 1;
  uint64 timestamp = 2;
  uint64 height = 3;
  uint64 quota_limit = 4;
  bytes proposer = 5;
  repeated bytes tx_hashes = 6;
  Proof proof = 7;
}

message Proof {
  uint64 height = 1;
  uint64 round = 2;
  bytes proposal_hash = 3;
  repeated Vote commits = 4;
}

message Vote {
  bytes address = 1;
  bytes signature = 2;
}
